<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    tools:context=".Activities.MainActivity2">


  <TextView
      android:id="@+id/textView19"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="372dp"
      android:text="@string/skills"
      android:textColor="#000000"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.225"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="280dp"
      android:text="@string/skills"
      android:textColor="#031D51"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.099"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView17"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="128dp"
      android:text="@string/work_experience"
      android:textColor="#031D51"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.127"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView16"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="524dp"
      android:text="@string/work_experience"
      android:textColor="#000000"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.225"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/saveBtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="156dp"
      android:layout_marginBottom="192dp"
      android:backgroundTint="#3F51B5"
      android:onClick="saveButtonAction"
      android:text="@string/save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/workExp_edt"
      android:layout_width="172dp"
      android:layout_height="45dp"
      android:autofillHints=""
      android:ems="10"
      android:lines="5"
      android:gravity="start|top"
      android:inputType="textMultiLine"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.854"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.251" />

  <EditText
      android:id="@+id/skills_edt"
      android:layout_width="172dp"
      android:layout_height="45dp"
      android:ems="10"
      android:lines="5"
      android:gravity="start|top"
      android:inputType="textMultiLine"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.853"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.476"
      android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>